monitoring-stack/uptime-kuma/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-service
  namespace: monitoring-stack
spec:
  selector:
    app: uptime-kuma
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 3001
  type: ClusterIP
