monitoring-stack/uptime-kuma/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: monitoring-stack
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    gethomepage.dev/description: uptime-kuma
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Monitoring
    gethomepage.dev/name: uptime-kuma
    gethomepage.dev/pod-selector: ""
spec:
  rules:
    - host: uptime-kuma.rke # Replace with your domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uptime-kuma-service
                port:
                  number: 3001
